# 2025-datathon

./: .gitignore  README.md  docker-compose.yml
backend/: .env  .gitignore  README.md  main.py  makefile  pyproject.toml  requirements.txt
backend/app/: db.py  gmail.py  jobs.py  oauth.py  util.py
backend/middleware/: auth.py
backend/scraper/: scrape_emails.py
browser-extension/: manifest.json
browser-extension/src/: api.js  background.js  content.js  cookie-blocker.js
browser-extension/src/popup/: popup.css  popup.html  popup.js
browser-extension/src/unused/: summarizer.js
browser-extension/src/unused/detectors/: detect-cookie-banner.js  detect-policy.js
frontend/: .gitignore  index.html  package.json  tailwind.config.js  vite.config.js
frontend/public/: manifest.json
frontend/src/: Routes.jsx
frontend/src/components/: PrivacyAlertNotification.jsx  PrivacyHeader.jsx  PrivacyTabs.jsx  ServiceConnectionStatus.jsx
frontend/src/pages/privacy-dashboard-overview/: index.jsx
frontend/src/pages/privacy-dashboard-overview/components/: DashboardControls.jsx  PrivacyRiskHeatmap.jsx  PrivacyScoreCard.jsx  RecentAlertsPanel.jsx  ServiceGridCard.jsx
frontend/src/pages/privacy-leaderboard/: index.jsx
frontend/src/pages/privacy-leaderboard/components/: LeaderboardFilters.jsx  LeaderboardHeader.jsx  LeaderboardSummary.jsx  LeaderboardTable.jsx  MobileLeaderboardCard.jsx
frontend/src/pages/privacy-preferences/: index.jsx
frontend/src/styles/: tailwind.css
scraper/: scrape_emails.py
(+5 files in other folders)
