[project]
name = "backend"
version = "0.1.0"
description = "Aegis Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121.3",
    "fastapi",
    "uvicorn",
    "pymongo",
    "google-auth",
    "google-auth-oauthlib",
    "google-api-python-client",
]
